Day12 decision tree

--- a/day11_NaiveBayes/NLTK.ipynb
+++ b/day11_NaiveBayes/NLTK.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "756a76b4-e907-409e-bbf5-caa60c7ebb34",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "d041711b-2093-4501-8876-a942f48c87da",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
        " 'science_fiction']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "95044486-feb3-4a15-b38c-eb1c55e0e68d",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "['The', 'Fulton', 'County', 'Grand', 'Jury', 'said', ...]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,17 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "16996499-452f-4ed3-a725-bbe40db26c53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = brown.sents(categories=[\"reviews\"])"
+    "data = brown.sents(categories=[\"reviews\"]) #sentences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "50dee2a8-3aa6-4ec5-96fe-545303bb9fd2",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "'Not the noblest performance we have heard him play , or the most spacious , or even the most eloquent .'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
