--- a/day11_NaiveBayes/SpamEmail.ipynb
+++ b/day11_NaiveBayes/SpamEmail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f22a8966-b428-4f8f-af9f-d2f90a9d0626",
    "metadata": {},
    "outputs": [],
@@ -181,6 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convering to matrix\n",
     "X = vc.todense()"
    ]
   },
